--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -14,6 +14,7 @@
 }
 
 @media screen and (min-width: 920px) {
+
   .container,
   header,
   footer {
@@ -26,7 +27,7 @@
   }
 
   header.visible {
-    row-gap: 128px;
+    row-gap: 64px;
   }
 
   .nav {
